# maxim-grishaev.info

./: .gcloudignore  .gitignore  Cargo.toml  app.yaml  go.mod  go.sum  main.go  package.json
aws/: Cargo.toml
aws/cdk/: cdk.json  package.json
aws/cdk/lib/: mgi-stack.ts
aws/src/: main.rs
client/: index.html  package.json
client/static/css/: style.css
client/static/docs/: MaximGrishaev.docx  MaximGrishaev_CoverLetter.docx
gcp/: handle_route.go  handle_static.go  init.go  read_static_file.go
static/: MaximGrishaev.docx  MaximGrishaev_CoverLetter.docx  index.html
static/css/: style.css
