[package]
name = "mgi-aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
lambda_runtime = "0.8.2"
tokio-postgres = "0.7.10"
aws-config = "0.56.1"

[[bin]]
name = "mgi-aws"
path = "./src/main.rs"
